--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,31 +1,46 @@
 .friendMessage {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .friendImageAndText {
-
+    display: flex;
+    flex-direction: row;
 }
 
 .friendImageAndText img {
-
+    width: 48px;
 }
 
 .friendText {
-
+    width: 450px;
+    background-color: #0066cc;
+    border: black solid 1px;
+    border-radius: 5px;
+    padding: 5px;
+    margin-right:5px ;
 }
+
 
 .friendText:after {
 
 }
 
 .friendName {
-
+    font-family: 'Montserrat',serif;
+    font-weight: 600;
+    font-size: 18px;
+    text-align: right;
 }
 
 .friendMessageText {
+    font-family: 'Montserrat',serif;
+    font-weight: 400;
+    font-size: 16px;
 
 }
 
 .friendTime {
-
+    display: flex;
 }
