--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,35 +1,72 @@
 .button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 24px;
+    gap: 10px;
+    width: 132px;
+    height: 30px;
+    border-radius: 3px;
 }
 
-.disabled {
+.disable {
+    width: 133px;
+    height: 30px;
+    opacity: 0.5;
+    border-radius: 3px;
+    color: #6d6d75;
+    background: #004D99;
 }
 
 .secondary {
+    width: 176px;
+    height: 30px;
+    border: 1px solid #0066CC;
+    color: #0066CC;
+    background: white;
 }
 
 .default {
+    border: #0066cc solid 1px;
+    background: #0066CC;
+
 }
 
 .red {
+    width: 129px;
+    height: 30px;
+    background: #CC1439;
+    border: 1px solid #CC1439;
+    color: white;
+
+
 }
 
 .default:hover {
+    background: #0080FF;
 }
 
 .red:hover {
+    background: #FF1A47;
+
 }
 
 .secondary:hover {
+    background:  #E5F0FA;
 }
 
 
 .default:active {
+    background: #0059B2;
 }
 
 .secondary:active {
+    background: #C9E5FF;
 }
 
 .red:active {
+    background: #B21232;
 }
 
 .button:disabled {
