--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,8 +1,18 @@
 .burgerMenuIcon {
+    height: 30px;
+    margin-left: 73px;
 }
 
 .header {
+    margin: 0 auto;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .header h1 {
+    font-size: 24px;
+    line-height: 29px;
+    margin-right: 73px;
 }
