- feat: add HW6

--- a/src/s2-homeworks/hw06/HW6.module.css
+++ b/src/s2-homeworks/hw06/HW6.module.css
@@ -1,5 +1,10 @@
 .buttonsContainer {
+    display: flex;
+    flex-direction: row;
+    margin: 5px;
 }
 
 .editableSpanContainer {
+    display: flex;
+    flex-direction: column;
 }
