--- a/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
+++ b/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
@@ -9,7 +9,11 @@
 }
 
 .label {
+    margin-bottom: 5px;
+    margin-left: 30px;
 }
 
 .options {
+    display: flex;
+    flex-direction: column;
 }
