- feat: add HW9

--- a/src/s2-homeworks/hw09/Clock.module.css
+++ b/src/s2-homeworks/hw09/Clock.module.css
@@ -1,7 +1,18 @@
 .buttonsContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 15px;
+}
+
+.buttonsContainer button {
+    width: 100px;
 }
 
 .clock {
+    display: flex;
+    flex-direction: column;
+    width: 220px;
 }
 
 .watch {
