--- a/src/s2-homeworks/hw10/Loader.module.css
+++ b/src/s2-homeworks/hw10/Loader.module.css
@@ -1,3 +1,19 @@
-.loader {
-    /*свг и/или анимация*/
+/*свг и/или анимация*/
+@keyframes ellipse4 {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@media screen {
+    .ellipse {
+        animation-duration: 1s;
+        animation-name: ellipse4;
+        animation-iteration-count:infinite;
+        width: 100px;
+    }
 }
