--- a/src/s2-homeworks/hw14/HW14.module.css
+++ b/src/s2-homeworks/hw14/HW14.module.css
@@ -1,7 +1,12 @@
 .tech {
-
+    font-family: 'Montserrat', sans-serif;
 }
 
 .loading {
-
+    display: flex;
+    justify-content: flex-end;
+    width: 372px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    color: #4D4D4D;
 }
