- feat add HW15

--- a/src/s2-homeworks/hw15/HW15.module.css
+++ b/src/s2-homeworks/hw15/HW15.module.css
@@ -1,17 +1,41 @@
 .tech {
-    width: 50vw;
+    width: 25vw;
+    border-top: 1px solid #E5E5E5;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 10px;
 }
 
 .developer {
-
+    width: 25vw;
+    border-top: 1px solid #E5E5E5;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 10px;
 }
 
 .techHeader {
-    width: 50vw;
+    width: 25vw;
+    background-color: #E5E5E5;
+    height: 36px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 10px;
 }
 
 .developerHeader {
-
+    width: 25vw;
+    background-color: #E5E5E5;
+    height: 36px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 10px;
 }
 
 .row {
@@ -23,5 +47,9 @@
 }
 
 .loading {
-
+    width: 85vh;
+    height: 30vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
